syntax = "proto3";

option csharp_namespace = "Discount";

package coupon;

service CouponService {
  rpc GetDiscount (CouponRequest) returns (CouponResponse);
}

message CouponRequest {
  string couponCode = 1;
  string userId = 2;
}

message CouponResponse {
  string message = 1;
}
